# clock_object

./: CMakeLists.txt  catch.hpp  main.cpp  tests.cpp
include/: clock.h  clock_base.h  counter_clock.h
src/: clock.cpp  clock_base.cpp  counter_clock.cpp
